--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+	"dotenv": "^8.2.0",
     "@google-cloud/tasks": "^1.4.0",
     "@slack/bolt": "^1.2.0",
     "@slack/interactive-messages": "^1.3.0",
